--- a/windows_vs/minecraftcpp.vcxproj
+++ b/windows_vs/minecraftcpp.vcxproj
@@ -62,6 +62,7 @@
     <ClInclude Include="..\source\client\gui\screens\ChatScreen.hpp" />
     <ClInclude Include="..\source\client\gui\screens\ConfirmScreen.hpp" />
     <ClInclude Include="..\source\client\gui\screens\CreateWorldScreen.hpp" />
+    <ClInclude Include="..\source\client\gui\screens\DeathScreen.hpp" />
     <ClInclude Include="..\source\client\gui\screens\DeleteWorldScreen.hpp" />
     <ClInclude Include="..\source\client\gui\screens\DirectConnectScreen.hpp" />
     <ClInclude Include="..\source\client\gui\screens\IngameBlockSelectionScreen.hpp" />
@@ -416,6 +417,7 @@
     <ClCompile Include="..\source\client\gui\screens\ChatScreen.cpp" />
     <ClCompile Include="..\source\client\gui\screens\ConfirmScreen.cpp" />
     <ClCompile Include="..\source\client\gui\screens\CreateWorldScreen.cpp" />
+    <ClCompile Include="..\source\client\gui\screens\DeathScreen.cpp" />
     <ClCompile Include="..\source\client\gui\screens\DeleteWorldScreen.cpp" />
     <ClCompile Include="..\source\client\gui\screens\DirectConnectScreen.cpp" />
     <ClCompile Include="..\source\client\gui\screens\IngameBlockSelectionScreen.cpp" />
