* Move synth stuff into world/level/levelgen/synth

--- a/windows_vs/minecraftcpp.vcxproj
+++ b/windows_vs/minecraftcpp.vcxproj
@@ -37,14 +37,11 @@
     <ClInclude Include="..\source\client\common\AABB.hpp" />
     <ClInclude Include="..\source\client\common\CThread.hpp" />
     <ClInclude Include="..\source\client\common\HitResult.hpp" />
-    <ClInclude Include="..\source\client\common\ImprovedNoise.hpp" />
     <ClInclude Include="..\source\client\common\LongHack.hpp" />
     <ClInclude Include="..\source\client\common\Matrix.hpp" />
     <ClInclude Include="..\source\client\common\Mth.hpp" />
     <ClInclude Include="..\source\client\common\Options.hpp" />
-    <ClInclude Include="..\source\client\common\PerlinNoise.hpp" />
     <ClInclude Include="..\source\client\common\Random.hpp" />
-    <ClInclude Include="..\source\client\common\Synth.hpp" />
     <ClInclude Include="..\source\client\common\Timer.hpp" />
     <ClInclude Include="..\source\client\common\Util.hpp" />
     <ClInclude Include="..\source\client\common\Utils.hpp" />
@@ -161,6 +158,9 @@
     <ClInclude Include="..\source\world\level\levelgen\feature\Feature.hpp" />
     <ClInclude Include="..\source\world\level\levelgen\feature\LargeCaveFeature.hpp" />
     <ClInclude Include="..\source\world\level\levelgen\feature\LargeFeature.hpp" />
+    <ClInclude Include="..\source\world\level\levelgen\synth\ImprovedNoise.hpp" />
+    <ClInclude Include="..\source\world\level\levelgen\synth\PerlinNoise.hpp" />
+    <ClInclude Include="..\source\world\level\levelgen\synth\Synth.hpp" />
     <ClInclude Include="..\source\world\level\LevelListener.hpp" />
     <ClInclude Include="..\source\world\level\Material.hpp" />
     <ClInclude Include="..\source\world\level\Region.hpp" />
@@ -393,13 +393,10 @@
     <ClCompile Include="..\source\client\common\AABB.cpp" />
     <ClCompile Include="..\source\client\common\CThread.cpp" />
     <ClCompile Include="..\source\client\common\HitResult.cpp" />
-    <ClCompile Include="..\source\client\common\ImprovedNoise.cpp" />
     <ClCompile Include="..\source\client\common\Matrix.cpp" />
     <ClCompile Include="..\source\client\common\Mth.cpp" />
     <ClCompile Include="..\source\client\common\Options.cpp" />
-    <ClCompile Include="..\source\client\common\PerlinNoise.cpp" />
     <ClCompile Include="..\source\client\common\Random.cpp" />
-    <ClCompile Include="..\source\client\common\Synth.cpp" />
     <ClCompile Include="..\source\client\common\Timer.cpp" />
     <ClCompile Include="..\source\client\common\Util.cpp" />
     <ClCompile Include="..\source\client\common\Utils.cpp" />
@@ -537,6 +534,9 @@
     <ClCompile Include="..\source\world\level\levelgen\feature\SpringFeature.cpp" />
     <ClCompile Include="..\source\world\level\levelgen\feature\SpruceFeature.cpp" />
     <ClCompile Include="..\source\world\level\levelgen\feature\TreeFeature.cpp" />
+    <ClCompile Include="..\source\world\level\levelgen\synth\ImprovedNoise.cpp" />
+    <ClCompile Include="..\source\world\level\levelgen\synth\PerlinNoise.cpp" />
+    <ClCompile Include="..\source\world\level\levelgen\synth\Synth.cpp" />
     <ClCompile Include="..\source\world\level\LevelListener.cpp" />
     <ClCompile Include="..\source\world\level\Material.cpp" />
     <ClCompile Include="..\source\world\level\Region.cpp" />
