* Move client/common/ and client/network/ into common/ and network/ respectively.

--- a/windows_vs/minecraftcpp.vcxproj
+++ b/windows_vs/minecraftcpp.vcxproj
@@ -34,15 +34,6 @@
     <ClInclude Include="..\platforms\windows\SoundSystemWindows.hpp" />
     <ClInclude Include="..\source\App.hpp" />
     <ClInclude Include="..\source\AppPlatform.hpp" />
-    <ClInclude Include="..\source\client\common\CThread.hpp" />
-    <ClInclude Include="..\source\client\common\LongHack.hpp" />
-    <ClInclude Include="..\source\client\common\Matrix.hpp" />
-    <ClInclude Include="..\source\client\common\Mth.hpp" />
-    <ClInclude Include="..\source\client\common\Options.hpp" />
-    <ClInclude Include="..\source\client\common\Random.hpp" />
-    <ClInclude Include="..\source\client\common\Timer.hpp" />
-    <ClInclude Include="..\source\client\common\Util.hpp" />
-    <ClInclude Include="..\source\client\common\Utils.hpp" />
     <ClInclude Include="..\source\client\gui\components\AvailableGamesList.hpp" />
     <ClInclude Include="..\source\client\gui\components\Button.hpp" />
     <ClInclude Include="..\source\client\gui\components\RolledSelectionList.hpp" />
@@ -73,13 +64,6 @@
     <ClInclude Include="..\source\client\model\HumanoidModel.hpp" />
     <ClInclude Include="..\source\client\model\Model.hpp" />
     <ClInclude Include="..\source\client\model\PolygonQuad.hpp" />
-    <ClInclude Include="..\source\client\network\ClientSideNetworkHandler.hpp" />
-    <ClInclude Include="..\source\client\network\MinecraftPackets.hpp" />
-    <ClInclude Include="..\source\client\network\NetEventCallback.hpp" />
-    <ClInclude Include="..\source\client\network\Packet.hpp" />
-    <ClInclude Include="..\source\client\network\PingedCompatibleServer.hpp" />
-    <ClInclude Include="..\source\client\network\RakNetInstance.hpp" />
-    <ClInclude Include="..\source\client\network\ServerSideNetworkHandler.hpp" />
     <ClInclude Include="..\source\client\player\input\Controller.hpp" />
     <ClInclude Include="..\source\client\player\input\ControllerTurnInput.hpp" />
     <ClInclude Include="..\source\client\player\input\ITurnInput.hpp" />
@@ -121,7 +105,23 @@
     <ClInclude Include="..\source\client\sound\SoundEngine.hpp" />
     <ClInclude Include="..\source\client\sound\SoundRepository.hpp" />
     <ClInclude Include="..\source\client\sound\SoundSystem.hpp" />
+    <ClInclude Include="..\source\common\CThread.hpp" />
+    <ClInclude Include="..\source\common\LongHack.hpp" />
+    <ClInclude Include="..\source\common\Matrix.hpp" />
+    <ClInclude Include="..\source\common\Mth.hpp" />
+    <ClInclude Include="..\source\common\Options.hpp" />
+    <ClInclude Include="..\source\common\Random.hpp" />
+    <ClInclude Include="..\source\common\Timer.hpp" />
+    <ClInclude Include="..\source\common\Util.hpp" />
+    <ClInclude Include="..\source\common\Utils.hpp" />
     <ClInclude Include="..\source\Minecraft.hpp" />
+    <ClInclude Include="..\source\network\ClientSideNetworkHandler.hpp" />
+    <ClInclude Include="..\source\network\MinecraftPackets.hpp" />
+    <ClInclude Include="..\source\network\NetEventCallback.hpp" />
+    <ClInclude Include="..\source\network\Packet.hpp" />
+    <ClInclude Include="..\source\network\PingedCompatibleServer.hpp" />
+    <ClInclude Include="..\source\network\RakNetInstance.hpp" />
+    <ClInclude Include="..\source\network\ServerSideNetworkHandler.hpp" />
     <ClInclude Include="..\source\NinecraftApp.hpp" />
     <ClInclude Include="..\source\world\entity\Entity.hpp" />
     <ClInclude Include="..\source\world\entity\FallingTile.hpp" />
@@ -390,14 +390,6 @@
     <ClCompile Include="..\platforms\windows\SoundSystemWindows.cpp" />
     <ClCompile Include="..\source\App.cpp" />
     <ClCompile Include="..\source\AppPlatform.cpp" />
-    <ClCompile Include="..\source\client\common\CThread.cpp" />
-    <ClCompile Include="..\source\client\common\Matrix.cpp" />
-    <ClCompile Include="..\source\client\common\Mth.cpp" />
-    <ClCompile Include="..\source\client\common\Options.cpp" />
-    <ClCompile Include="..\source\client\common\Random.cpp" />
-    <ClCompile Include="..\source\client\common\Timer.cpp" />
-    <ClCompile Include="..\source\client\common\Util.cpp" />
-    <ClCompile Include="..\source\client\common\Utils.cpp" />
     <ClCompile Include="..\source\client\gui\components\AvailableGamesList.cpp" />
     <ClCompile Include="..\source\client\gui\components\Button.cpp" />
     <ClCompile Include="..\source\client\gui\components\RolledSelectionList.cpp" />
@@ -428,24 +420,6 @@
     <ClCompile Include="..\source\client\model\HumanoidModel.cpp" />
     <ClCompile Include="..\source\client\model\Model.cpp" />
     <ClCompile Include="..\source\client\model\PolygonQuad.cpp" />
-    <ClCompile Include="..\source\client\network\ClientSideNetworkHandler.cpp" />
-    <ClCompile Include="..\source\client\network\MinecraftPackets.cpp" />
-    <ClCompile Include="..\source\client\network\NetEventCallback.cpp" />
-    <ClCompile Include="..\source\client\network\packets\AddPlayerPacket.cpp" />
-    <ClCompile Include="..\source\client\network\packets\ChunkDataPacket.cpp" />
-    <ClCompile Include="..\source\client\network\packets\LevelDataPacket.cpp" />
-    <ClCompile Include="..\source\client\network\packets\LoginPacket.cpp" />
-    <ClCompile Include="..\source\client\network\packets\MessagePacket.cpp" />
-    <ClCompile Include="..\source\client\network\packets\MovePlayerPacket.cpp" />
-    <ClCompile Include="..\source\client\network\packets\PlaceBlockPacket.cpp" />
-    <ClCompile Include="..\source\client\network\packets\PlayerEquipmentPacket.cpp" />
-    <ClCompile Include="..\source\client\network\packets\RemoveBlockPacket.cpp" />
-    <ClCompile Include="..\source\client\network\packets\RemoveEntityPacket.cpp" />
-    <ClCompile Include="..\source\client\network\packets\RequestChunkPacket.cpp" />
-    <ClCompile Include="..\source\client\network\packets\StartGamePacket.cpp" />
-    <ClCompile Include="..\source\client\network\packets\UpdateBlockPacket.cpp" />
-    <ClCompile Include="..\source\client\network\RakNetInstance.cpp" />
-    <ClCompile Include="..\source\client\network\ServerSideNetworkHandler.cpp" />
     <ClCompile Include="..\source\client\player\input\Controller.cpp" />
     <ClCompile Include="..\source\client\player\input\ControllerTurnInput.cpp" />
     <ClCompile Include="..\source\client\player\input\ITurnInput.cpp" />
@@ -488,7 +462,33 @@
     <ClCompile Include="..\source\client\sound\SoundEngine.cpp" />
     <ClCompile Include="..\source\client\sound\SoundRepository.cpp" />
     <ClCompile Include="..\source\client\sound\SoundSystem.cpp" />
+    <ClCompile Include="..\source\common\CThread.cpp" />
+    <ClCompile Include="..\source\common\Matrix.cpp" />
+    <ClCompile Include="..\source\common\Mth.cpp" />
+    <ClCompile Include="..\source\common\Options.cpp" />
+    <ClCompile Include="..\source\common\Random.cpp" />
+    <ClCompile Include="..\source\common\Timer.cpp" />
+    <ClCompile Include="..\source\common\Util.cpp" />
+    <ClCompile Include="..\source\common\Utils.cpp" />
     <ClCompile Include="..\source\Minecraft.cpp" />
+    <ClCompile Include="..\source\network\ClientSideNetworkHandler.cpp" />
+    <ClCompile Include="..\source\network\MinecraftPackets.cpp" />
+    <ClCompile Include="..\source\network\NetEventCallback.cpp" />
+    <ClCompile Include="..\source\network\packets\AddPlayerPacket.cpp" />
+    <ClCompile Include="..\source\network\packets\ChunkDataPacket.cpp" />
+    <ClCompile Include="..\source\network\packets\LevelDataPacket.cpp" />
+    <ClCompile Include="..\source\network\packets\LoginPacket.cpp" />
+    <ClCompile Include="..\source\network\packets\MessagePacket.cpp" />
+    <ClCompile Include="..\source\network\packets\MovePlayerPacket.cpp" />
+    <ClCompile Include="..\source\network\packets\PlaceBlockPacket.cpp" />
+    <ClCompile Include="..\source\network\packets\PlayerEquipmentPacket.cpp" />
+    <ClCompile Include="..\source\network\packets\RemoveBlockPacket.cpp" />
+    <ClCompile Include="..\source\network\packets\RemoveEntityPacket.cpp" />
+    <ClCompile Include="..\source\network\packets\RequestChunkPacket.cpp" />
+    <ClCompile Include="..\source\network\packets\StartGamePacket.cpp" />
+    <ClCompile Include="..\source\network\packets\UpdateBlockPacket.cpp" />
+    <ClCompile Include="..\source\network\RakNetInstance.cpp" />
+    <ClCompile Include="..\source\network\ServerSideNetworkHandler.cpp" />
     <ClCompile Include="..\source\NinecraftApp.cpp" />
     <ClCompile Include="..\source\world\entity\Entity.cpp" />
     <ClCompile Include="..\source\world\entity\FallingTile.cpp" />
