--- a/windows_vs/minecraftcpp.vcxproj.filters
+++ b/windows_vs/minecraftcpp.vcxproj.filters
@@ -88,14 +88,17 @@
     <Filter Include="source\platforms">
       <UniqueIdentifier>{31101b35-f1ce-490e-a6b9-a5a1fab80b27}</UniqueIdentifier>
     </Filter>
-    <Filter Include="source\platforms\windows">
-      <UniqueIdentifier>{4cc1a780-f0a9-41b1-bee2-dc28f00fb958}</UniqueIdentifier>
-    </Filter>
     <Filter Include="source\platforms\openal">
       <UniqueIdentifier>{cc57a0f6-733d-44fa-8478-b1826b074d66}</UniqueIdentifier>
     </Filter>
     <Filter Include="thirdparty\zlib">
       <UniqueIdentifier>{b413cd08-238d-4e52-90c7-eccb86bc37ed}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="source\platforms\windows">
+      <UniqueIdentifier>{f9e5b8b6-f120-4f0b-8dd2-bfff6206a459}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="source\compat">
+      <UniqueIdentifier>{4bf964b9-fab2-442c-962e-bc36b4daa517}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -984,12 +987,6 @@
     <ClInclude Include="..\source\world\level\levelgen\biome\BiomeSource.hpp">
       <Filter>source\world\level\levelgen\biome</Filter>
     </ClInclude>
-    <ClInclude Include="..\platforms\windows\AppPlatform_windows.hpp">
-      <Filter>source\platforms\windows</Filter>
-    </ClInclude>
-    <ClInclude Include="..\platforms\windows\SoundSystemWindows.hpp">
-      <Filter>source\platforms\windows</Filter>
-    </ClInclude>
     <ClInclude Include="..\platforms\PlatformDefinitions.hpp">
       <Filter>source\platforms</Filter>
     </ClInclude>
@@ -1160,6 +1157,15 @@
     </ClInclude>
     <ClInclude Include="..\source\client\gui\screens\DeathScreen.hpp">
       <Filter>source\client\gui\screens</Filter>
+    </ClInclude>
+    <ClInclude Include="..\platforms\windows\AppPlatform_windows.hpp">
+      <Filter>source\platforms\windows</Filter>
+    </ClInclude>
+    <ClInclude Include="..\platforms\windows\SoundSystemWindows.hpp">
+      <Filter>source\platforms\windows</Filter>
+    </ClInclude>
+    <ClInclude Include="..\compat\AKeyCodes.hpp">
+      <Filter>source\compat</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -2105,15 +2111,6 @@
     <ClCompile Include="..\source\world\level\levelgen\biome\Biome.cpp">
       <Filter>source\world\level\levelgen\biome</Filter>
     </ClCompile>
-    <ClCompile Include="..\platforms\windows\main.cpp">
-      <Filter>source\platforms\windows</Filter>
-    </ClCompile>
-    <ClCompile Include="..\platforms\windows\SoundSystemWindows.cpp">
-      <Filter>source\platforms\windows</Filter>
-    </ClCompile>
-    <ClCompile Include="..\platforms\windows\AppPlatform_windows.cpp">
-      <Filter>source\platforms\windows</Filter>
-    </ClCompile>
     <ClCompile Include="..\thirdparty\stb_image_impl.c">
       <Filter>thirdparty</Filter>
     </ClCompile>
@@ -2188,6 +2185,15 @@
     </ClCompile>
     <ClCompile Include="..\source\client\gui\screens\DeathScreen.cpp">
       <Filter>source\client\gui\screens</Filter>
+    </ClCompile>
+    <ClCompile Include="..\platforms\windows\SoundSystemWindows.cpp">
+      <Filter>source\platforms\windows</Filter>
+    </ClCompile>
+    <ClCompile Include="..\platforms\windows\AppPlatform_windows.cpp">
+      <Filter>source\platforms\windows</Filter>
+    </ClCompile>
+    <ClCompile Include="..\platforms\windows\main.cpp">
+      <Filter>source\platforms\windows</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
